--- a/index.html
+++ b/index.html
@@ -73,7 +73,48 @@
       eros at ipsum feugiat congue sed vel risus. Donec eu auctor 
       ante. Nunc auctor massa gravida, hendrerit eros vel, 
       molestie mauris.</p>
-  </section>
+  </section> <!--sección-->
+
+  <section class="programa">
+    <div class="contenedor-video">
+      <video autoplay loop poster="img/bg-talleres.jpg">
+        <source src="video/video.mp4" type="video/mp4">
+        <source src="video/video.webm" type="video/webm">
+        <source src="video/video.ogv" type="video/ogv">
+      </video>
+    </div><!--contenedor-video-->
+
+    <div class="contenido-programa">
+      <div class="contenedor">
+        <div class="programa-evento">
+          <h2>Programa del evento</h2>
+          <nav class="menu-programa">
+            <a href="#talleres"><i class="fas fa-code" aria-hidden="true"></i>Talleres</a>
+            <a href="#conferencias"><i class="fas fa-comment" aria-hidden="true"></i>Conferencias</a>
+            <a href="#seminarios"><i class="fas fa-university" aria-hidden="true"></i>Seminarios</a>
+          </nav>
+
+          <div id="talleres" class="info-curso ocultar clearfix">
+            <div class="detalle-evento">
+              <h3>HTML5, CSS3 y JavaScript</h3>
+              <p><i class="fa fa-clock-o" aria-hidden="true"></i> 16:00 hrs</p>
+              <p><i class="fas fa-calendar" aria-hidden="true"></i> 10 de Dic</p>
+              <p><i class="fas fa-user" aria-hidden="true"></i> Julián René Cháux Cedeño</p>
+            </div>
+
+            <div class="detalle-evento">
+              <h3>Responsive Web Design</h3>
+              <p><i class="fa fa-clock-o" aria-hidden="true"></i> 20:00 hrs</p>
+              <p><i class="fas fa-calendar" aria-hidden="true"></i> 10 de Dic</p>
+              <p><i class="fas fa-user" aria-hidden="true"></i> Julián René Cháux Cedeño</p>
+            </div>
+
+            <a href="#" class="button float-right">Ver Todos</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section><!--programa-->
 
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
