05062020 - Pagina Principal: Sección Programa del Evento

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <div class="detalle-evento">
               <h3>Responsive Web Design</h3>
-              <p><i class="fa fa-clock-o" aria-hidden="true"></i> 20:00 hrs</p>
+              <p><i class="fa fa-times-circle-o" aria-hidden="true"></i> 20:00 hrs</p>
               <p><i class="fas fa-calendar" aria-hidden="true"></i> 10 de Dic</p>
               <p><i class="fas fa-user" aria-hidden="true"></i> Julián René Cháux Cedeño</p>
             </div>
